// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FocusZone renders FocusZone correctly with aria-describedby and aria-labelledby 1`] = `
<div
  aria-describedby="customDescribedBy"
  aria-labelledby="customLabelledBy"
  class=
      ms-FocusZone
      &:focus {
        outline: none;
      }
  data-focuszone-id="FocusZone0"
  data-tabster="{\\"uncontrolled\\": {}}"
/>
`;

exports[`FocusZone renders FocusZone correctly with no props 1`] = `
<div
  class=
      ms-FocusZone
      &:focus {
        outline: none;
      }
  data-focuszone-id="FocusZone0"
  data-tabster="{\\"uncontrolled\\": {}}"
/>
`;
